modified:   app/models/stream.rb modified:   app/views/streams/show.html.erb 	modified:   app/views/welcome/frontpage.html.erb 	modified:   log/development.log 	new file:   tmp/pids/server.pid
 Untracked files:
	.bundle/

--- a/app/views/streams/show.html.erb
+++ b/app/views/streams/show.html.erb
@@ -11,4 +11,6 @@
 	</div>
 	<% end %>
 
-	<p> <%= @href %> </p>
+<!-- 	<p> <iframe width="560" height="315" src= frameborder="0" allowfullscreen></iframe> </p>
+ -->
+ <%= @href %>
