--- a/app/views/welcome/frontpage.html.erb
+++ b/app/views/welcome/frontpage.html.erb
@@ -1,9 +1,6 @@
 <h1>Welcome</h1>
-
-#top of page, stream
-#calender
-#link to resume
-
+<p> <iframe width="560" height="315" src=<%= %> frameborder="0" allowfullscreen></iframe> </p>
+<%= %>
 
 <%= render 'posts/recentposts' %>
 
