--- a/app/views/welcome/frontpage.html.erb
+++ b/app/views/welcome/frontpage.html.erb
@@ -1,4 +1,6 @@
-<div class="header">Schamtoo eSports Commentator  </div>
+<div class="header">
+	<div class="header-content">Schamtoo</div>
+</div>
 
 <h1>Welcome</h1> 
 <%= render 'streams/tabsofstreams' %>
