--- a/app/views/welcome/frontpage.html.erb
+++ b/app/views/welcome/frontpage.html.erb
@@ -1,9 +1,8 @@
-<div class="header">
-	<div class="header-content">Schamtoo</div>
+<div class="header-container">
+	<div class="header-title">Schamtoo</div>
 </div>
-
-<h1>Welcome</h1> 
-<%= render 'streams/tabsofstreams' %>
-
-<%= render 'posts/recentposts' %>
+<div class="body">
+	<h2>Commentator & Streamer</h2> 
+	<%= render 'streams/tabsofstreams' %>
+</div>
 
