--- a/app/assets/stylesheets/stream.css.scss
+++ b/app/assets/stylesheets/stream.css.scss
@@ -15,24 +15,21 @@
 
 .video-player iframe, .video-container object, .video-container embed {
 		position:absolute;
-	    top: 0; right: 0;
-	    bottom: 0; left: 0;
+	    top: 0; 
+	    left: 0;
   		width:100%;
 	    height:100%;
-  	    margin: auto; 	
 }
 
 .video-player-container{ 
   position:relative;
   padding-bottom: 56.25%; /* 16:9 */
-  padding-top:0px;
   border: 5px solid grey;
   top: 0; left: 0;
-  width:80%;
-  height:80%;
-  margin: auto;
+  width:90%;
+  margin: 0 auto;
 }
 .video-tabs{
-	width:80%;
+	width:90%;
 	margin: auto;
 }
