--- a/app/views/streams/show.html.erb
+++ b/app/views/streams/show.html.erb
@@ -1,2 +1,5 @@
-
-<iframe width="560" height="315" src=<%= @stream %> frameborder="0" allowfullscreen></iframe>
+<div class="video-player-container">
+  <div id="video-player">
+    <div class="video-player"><iframe width="560" height="315" src=<%= @stream.streamuri %> frameborder="0" allowfullscreen></iframe></div>
+  </div>
+</div>
