figuring out Model caching

--- a/app/views/streams/_tabsofstreams.html.erb
+++ b/app/views/streams/_tabsofstreams.html.erb
@@ -24,9 +24,9 @@ $(function() {
 
 <div id="tabs" class="video-tabs">
   <ul id ="video-choices" class="nav nav-tabs" >
-    <li id="mlg-tab" class="active"><a data-toggle="tab" href="#MLGtv">MLGtv <%= checkOnline("mlg.tv") %> </a></li>
-    <li id="twitch-tab"><a data-toggle="tab" href="#Twitch">Twitch <%= checkOnline("twitch.tv") %> </a></li>
-    <li id="youtube-tab"><a data-toggle="tab" href="#Youtube">YouTube <%= checkOnline("youtube.com") %> </a></li>
+    <li id="mlg-tab" class="active"><a data-toggle="tab" href="#MLGtv">MLGtv <%= pause_or_play(Stream.find_by_source("twitch")) %> </a></li>
+    <li id="twitch-tab"><a data-toggle="tab" href="#Twitch">Twitch  </a></li>
+    <li id="youtube-tab"><a data-toggle="tab" href="#Youtube">YouTube</a></li>
   </ul> 
 </div>
 <div class="video-player-container">
