--- a/app/views/streams/edit.html.erb
+++ b/app/views/streams/edit.html.erb
@@ -1,7 +1,13 @@
 <%= render "sessions/session" %>
+
+<% if current_user?(User.find_by_login("Schamtoo")) %>
+
 <h1>Editing Streams</h1>
 <% for stream in Stream.all %> 
 	<%= render partial: 'form', locals: {path: {controller: "streams", action: (edit)}}%>
 <% end %>
 
 <%= link_to 'Back', posts_path %>
+<% else %>
+<h1>403 Forbidden</h1>
+<%end%>
