--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,4 +22,8 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
   background-color: #efefef;
+  position: absolute;
+  height:auto;
+  width:100%;
+  background-color: #003664;
 }
