modified:   app/controllers/streams_controller.rb 	modified:   app/controllers/welcome_controller.rb 	modified:   app/views/posts/_form.html.erb 	modified:   app/views/posts/edit.html.erb 	modified:   app/views/posts/new.html.erb 	modified:   app/views/streams/index.html.erb

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,30 +1,32 @@
 
 
+<%= render "sessions/session" %>
+<% if current_user?(User.find_by_login("Schamtoo")) %>
 
-
- <%= form_for :post, url: posts_path do |f| %>
- <% if @post.errors.any? %>
-	<div id="error_explanation">
-	<h2><%= pluralize(@post.errors.count, "error") %> prohibited
-		this post from being saved:</h2>
-	<u1>
-	<% @post.errors.full_messages.each do |msg| %>
-		<li><%= msg %></li>
+	 <%= form_for :post, url: posts_path do |f| %>
+	 <% if @post.errors.any? %>
+		<div id="error_explanation">
+		<h2><%= pluralize(@post.errors.count, "error") %> prohibited
+			this post from being saved:</h2>
+		<u1>
+		<% @post.errors.full_messages.each do |msg| %>
+			<li><%= msg %></li>
+		<% end %>
+		</u1>
+		</div>
+		<% end %>
+		<p> 
+			<%= f.label :title %><br>
+			<%= f.text_field :title %>
+		</p>
+		
+		<p>
+			<%= f.label :text %><br>
+			<%= f.text_field :text %>
+		</p>
+		
+		<p>
+			<%= f.submit %>
+		</p>
 	<% end %>
-	</u1>
-	</div>
-	<% end %>
-	<p> 
-		<%= f.label :title %><br>
-		<%= f.text_field :title %>
-	</p>
-	
-	<p>
-		<%= f.label :text %><br>
-		<%= f.text_field :text %>
-	</p>
-	
-	<p>
-		<%= f.submit %>
-	</p>
 <% end %>
