--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,11 @@
 <%= render "sessions/session" %>
-<h1>Editing post</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', posts_path %>
+<% if current_user?(User.find_by_login("Schamtoo")) %>
+
+	<h1>Editing post</h1>
+	 
+	<%= render 'form' %>
+	 
+	<%= link_to 'Back', posts_path %>
+<% else %> 
+	<h1> 403 Forbidden </h1>
+<% end %>
