--- a/app/views/streams/index.html.erb
+++ b/app/views/streams/index.html.erb
@@ -1,16 +1,23 @@
 <%= render 'sessions/session' %>
 <% if current_user?(User.find_by_login("Schamtoo")) %>
 	<% @streams.each do |stream| %>
+		<div class = "admin_block">
+			<div class = "admin_left_column">
+				<%= render 'form', :@stream => stream %>
+			</div>
+			<div class = "admin_right_column">
+				<iframe width="560" height="315" style="float: right;" src=<%= stream.streamuri %> frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+	<% end %>
+
+	<h1> New Stream Form </h1>
 	<div class = "admin_block">
 		<div class = "admin_left_column">
-			<%= render 'form', :@stream => stream %>
-		</div>
-		<div class = "admin_right_column">
-			<iframe width="560" height="315" style="float: right;" src=<%= stream.streamuri %> frameborder="0" allowfullscreen></iframe>
+			<%= render 'form' %>
 		</div>
 	</div>
-	<% end %>
+
 <% else %>
 	<h1> 403 Forbidden </h1>
-
 <% end %>  
