modified:   app/assets/stylesheets/application.css.scss 	modified:   app/views/layouts/application.html.erb 	modified:   app/views/posts/_recentposts.html.erb 	modified:   app/views/welcome/frontpage.html.erb

--- a/app/views/welcome/frontpage.html.erb
+++ b/app/views/welcome/frontpage.html.erb
@@ -1,5 +1,6 @@
 <head>
 <%= favicon_link_tag 'favicon.ico' %>
+<title>Schamtoo Commentator & Streamer</title>
 </head>
 
 <div class="header-container">
@@ -13,7 +14,9 @@
 <%= render 'streams/tabsofstreams' %>
 </div>
 
-
+<div class="blog_block">
+	<h1>Blog</h1>
+</div>
 
 <div class="resume_block">
 	<%= link_to("resume")  do %>
