--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,11 +15,10 @@
 @import "bootstrap";
 
 $font-stack : DIN, sans-serif;
-$primary-color : #333;
 
 body {
   font: 100% $font-stack;
-  color: $primary-color;
+  color: white;
   background-color: #efefef;
 
   background-color: #003664;
