--- a/app/views/posts/_recentposts.html.erb
+++ b/app/views/posts/_recentposts.html.erb
@@ -12,13 +12,8 @@
  
   <%  @posts.each do |post| %>
     <tr>
-      <td><%= post.title %></td>
-      <td><%= post.text %></td>
-      <td><%= link_to 'Show', post %></td>
-      <% if current_user?(User.find_by_id(post.user_id)) %>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'You sho bot dat?' } %></td>
-      <% end %>  
+      <td><%= link_to post.title, post %></td>
+
     </tr>
   <% end %>
 </table>
