--- a/app/views/welcome/frontpage.html.erb
+++ b/app/views/welcome/frontpage.html.erb
@@ -15,7 +15,16 @@
 </div>
 
 <div class="blog_block">
-	<h1>Blog</h1>
+	<h1 class="blog_header">Blog</h1>
+	<%  @posts.each do |post| %>
+		<td> 
+			<div class="post_title"> <%= link_to post.title, post %></div>
+			<div class="post_date"> <%=post.created_at %></div>
+			<div class="post_blurb"> <%=post.text %> </div>
+		</td>
+	<% end %>
+
+
 </div>
 
 <div class="resume_block">
