modified:   app/views/posts/_form.html.erb modified:   app/views/posts/show.html.erb 	modified:   app/views/welcome/frontpage.html.erb 	modified:   db/migrate/20151114233306_add_blurb_to_post.rb 	modified:   db/schema.rb

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,6 +24,14 @@
 			<%= f.label :text %><br>
 			<%= f.text_field :text %>
 		</p>
+		<p>
+			<%= f.label :remote_url %><br>
+			<%= f.text_field :remote_url %>
+		</p>
+		<p>
+			<%= f.label :blurb %><br>
+			<%= f.text_field :blurb %>
+		</p>
 		
 		<p>
 			<%= f.submit %>
