modified:   app/assets/stylesheets/application.css.scss 	modified:   app/assets/stylesheets/stream.css 	modified:   app/assets/stylesheets/welcome.css

--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -32,7 +32,7 @@
 	font-weight: bold;
 	height: 100px;
 	float: left;
-	border-bottom: solid #003634;
+	border-bottom:  solid #00294d;
 }
 .header-title{
 	color: #003664;
