modified:   app/assets/stylesheets/posts.css 	modified:   app/assets/stylesheets/welcome.css 	new file:   app/views/posts/about_me.html.erb 	modified:   app/views/posts/show.html.erb 	new file:   app/views/welcome/_contactme_footer.html 	modified:   app/views/welcome/frontpage.html.erb

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -3,3 +3,26 @@
 	width: 400px;
 	height: 300px;
 }
+.post_background{
+	background:white;
+	top:0px; left:0px;
+	position:absolute;
+	height:100%;
+}
+
+.post_page_block{
+
+	margin-left: 10%;
+	margin-right: 10%;
+	padding:10px;
+	height:100%;
+	background: #003664;
+}
+
+.post_body{
+
+
+}
+.post_title{
+
+}
