--- a/app/views/welcome/frontpage.html.erb
+++ b/app/views/welcome/frontpage.html.erb
@@ -16,6 +16,7 @@
 
 <div class="blog_block">
 	<h1 class="blog_header">Blog</h1>
+	<div class="blog_posts_block">
 	<%  @posts.each do |post| %>
 		<td> 
 			<div class="blog_post_title"> <%= link_to post.title, post %></div>
@@ -23,18 +24,8 @@
 			<div class="post_blurb"> <%=post.blurb %> </div>
 		</td>
 	<% end %>
-
-
-</div>
-
-<div class="contactme_block">
-	<%= link_to("resume")  do %>
-		<h3 class= "contactme_column_left"> Resumé</h3>
-	<% end %>
-	<div class="contactme_column_right">
-		<%= link_to image_tag( "twitter-64.ico", :size => "20x20" ), "http://twitter.com/schamtoo", :target => "_blank" %>
-		<%= link_to image_tag( "youtube-64.ico", :size => "20x20"), "http://youtube.com/schamtoo", :target => "_blank" %>
-		<%= link_to image_tag( "facebook-64.ico", :size => "20x20"), "http://www.facebook.com/Kevin-SchAmToo-Pearson-225935654204092/", :target => "_blank" %>
-		<%= link_to image_tag( "github-6-64.ico",:size => "20x20" ), "http://github.com/schamtoo", :target => "_blank" %>
 	</div>
+
 </div>
+
+<%= render 'contactme_footer' %>
