--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -64,7 +64,7 @@
 	height: 50px;
 	border-top: thin white;
 	position: relative;
-
+	bottom:0px;
 	margin-top:5%;
 	border-top: thin solid white;
 	/*bottom: 0px;*/
@@ -128,23 +128,40 @@ a:hover, a:focus {
 }
 
 .blog_block{
+	overflow: auto;
+	display: table;
 	margin: auto;
 	position:relative;
 	width:80%;
+	height:100%;
 }
-
-.blog_post_title{
-	float:left;
-	font-size: 20px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	padding-left: 10px;
-	font-weight:100;
-}
-.blog_posts_block{
+.blog_post_block{
+	position:relative;
+	display: table-row;
 	background: #00294d;
 	position: relative;
 	height:100%;
 	width:100%;
+	padding:5px;
+}
+
+.blog_post_title{
+	float:left;
+	width:40%;
+	font-size: 20px;
+	padding-top: 15px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	font-weight:100;
+	height:100%;
+}
+
+.blog_post_blurb{
+	float:right;
+	right: 0px;
+	width:60%;
+	height:100%;
+	padding-top:2%;
+	padding-bottom:2%;
 
 }
